"Installed npm packages on json file"

--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
   "name": "javascript-development-environment",
   "version": "1.0.0",
-  "description": "Javascript development environment Pluralsight course by Cory House",
-  "scripts": {
-  },
+  "description": "JavaScript development environment Pluralsight course by Cory House",
+  "scripts": {},
   "author": "Blaire",
   "license": "MIT",
   "dependencies": {
+    "json-schema-faker": "^0.5.0-rcv.39",
     "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.0",
-    "@babel/core": "7.13.8",
-    "@babel/node": "7.13.0",
-    "@babel/preset-env": "7.13.8",
-    "@babel/register": "7.13.8",
+    "@babel/cli": "7.15.7",
+    "@babel/core": "7.15.5",
+    "@babel/node": "7.15.4",
+    "@babel/preset-env": "7.15.6",
+    "@babel/register": "7.15.3",
     "babel-loader": "8.2.2",
-    "chai": "4.3.0",
-    "chalk": "4.1.0",
-    "cheerio": "1.0.0-rc.5",
+    "chai": "4.3.4",
+    "chalk": "4.1.2",
+    "cheerio": "1.0.0-rc.10",
     "compression": "1.7.4",
     "cross-env": "7.0.3",
-    "css-loader": "5.1.0",
-    "eslint": "7.21.0",
-    "eslint-plugin-import": "2.22.1",
+    "css-loader": "0.1.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-import": "2.24.2",
     "eslint-watch": "7.0.0",
     "express": "4.17.1",
-    "faker": "^5.4.0",
-    "html-webpack-plugin": "5.2.0",
-    "jsdom": "^16.4.0",
-    "json-schema-faker": "0.5 0-rcv.27",
-    "json-server": "0.16.3",
-    "localtunnel": "2.0.1",
-    "mini-css-extract-plugin": "^1.3.9",
-    "mocha": "8.3.0",
+    "faker": "^5.5.3",
+    "html-webpack-plugin": "5.3.2",
+    "jsdom": "17.0.0",
+    "json-server": "0.16.2",
+    "localtunnel": "2.0.2",
+    "mini-css-extract-plugin": "2.3.0",
+    "mocha": "9.1.2",
     "npm-run-all": "4.1.5",
     "numeral": "2.0.6",
-    "open": "2.0.6",
+    "open": "8.2.1",
     "rimraf": "3.0.2",
-    "style-loader": "2.0.0",
+    "style-loader": "3.3.0",
     "surge": "0.21.7",
-    "webpack": "5.24.2",
-    "webpack-dev-middleware": "4.1.0"
+    "webpack": "5.56.1",
+    "webpack-dev-middleware": "5.2.1"
   }
 }
