--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cheerio": "1.0.0-rc.10",
     "compression": "1.7.4",
     "cross-env": "7.0.3",
-    "css-loader": "0.1.0",
+    "css-loader": "^0.1.0",
     "eslint": "7.32.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-watch": "7.0.0",
@@ -41,7 +41,7 @@
     "numeral": "2.0.6",
     "open": "^8.2.1",
     "rimraf": "3.0.2",
-    "style-loader": "3.3.0",
+    "style-loader": "^3.3.0",
     "surge": "0.21.7",
     "webpack": "5.56.1",
     "webpack-dev-middleware": "5.2.1"
