--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
     "start": "babel-node buildScripts/srcServer.js",
-    "share": "lt --port 3000"
+    "localtunnel": "lt --port 3000",
+    "share": "npm-run-all --parallel start localtunnel",
+    "lint": "esw webpack.config.* src buildScripts --color"
   },
   "author": "Blaire",
   "license": "MIT",
