--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
     "start": "babel-node buildScripts/srcServer.js",
+    "start-lint": "npm-run-all --parallel start lint:watch",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel start localtunnel",
-    "lint": "esw webpack.config.* src buildScripts --color"
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Blaire",
   "license": "MIT",
