--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mockapi",
     "open:src": "babel-node buildScripts/srcServer.js",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel start localtunnel",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
   },
   "author": "Blaire",
   "license": "MIT",
   "dependencies": {
-    "json-schema-faker": "^0.5.0-rcv.39",
+    "json-schema-faker": "^0.5.0-rcv.40",
     "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "eslint-watch": "7.0.0",
     "express": "4.17.1",
     "faker": "^5.5.3",
+    "json-schema-faker": "0.5.0-rcv.40",
     "html-webpack-plugin": "5.3.2",
     "jsdom": "17.0.0",
     "json-server": "0.16.2",
